// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assertLuxonValidity > with message="user-provided message" > should reject invalid 'DateTime' 1`] = `
[Error: user-provided message
user-provided reason. user-provided explanation]
`;

exports[`assertLuxonValidity > with message="user-provided message" > should reject invalid 'Duration' 1`] = `
[Error: user-provided message
user-provided reason. user-provided explanation]
`;

exports[`assertLuxonValidity > with message="user-provided message" > should reject invalid 'Interval' 1`] = `
[Error: user-provided message
user-provided reason. user-provided explanation]
`;

exports[`assertLuxonValidity > with message="user-provided message" > should reject undefined 1`] = `
[Error: user-provided message
undefined luxon value]
`;

exports[`assertLuxonValidity > with message=undefined > should reject invalid 'DateTime' 1`] = `[Error: user-provided reason. user-provided explanation]`;

exports[`assertLuxonValidity > with message=undefined > should reject invalid 'Duration' 1`] = `[Error: user-provided reason. user-provided explanation]`;

exports[`assertLuxonValidity > with message=undefined > should reject invalid 'Interval' 1`] = `[Error: user-provided reason. user-provided explanation]`;

exports[`assertLuxonValidity > with message=undefined > should reject undefined 1`] = `[Error: undefined luxon value]`;
